--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,7 @@
 #main{
-	width:300px;
-	padding:50px;
 	background-color:lightblue;
-	border-style:solid;
-	border-width:15px;
-	border-color:blue;
-	margin:20px;
+    width: 300px;
+    padding: 50px;
+    margin: 25px;
+    border: 15px solid blue;
 }
-p
